# SoT

./: LICENSE  README.md  pyproject.toml  requirements.txt
sketch_of_thought/: __init__.py  sketch_of_thought.py
sketch_of_thought/config/: config.py  warnings.py
