[build-system]
requires = [
    "setuptools>=75.8.2",
    "wheel>=0.45.1"
]
build-backend = "setuptools.build_meta"

[project]
name = "sketch_of_thought"
version = "0.1.0"
description = "Sketch-of-Thought (SoT) - A novel prompting framework for efficient reasoning in language models"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Simon A. Aytes", email = "saytes@kaist.ac.kr" }
]
dependencies = [
    "transformers>=4.37.0",
    "torch>=2.0.0",
    "tqdm>=4.67.0",
    "huggingface-hub>=0.29.0",
    "tokenizers>=0.21.0",
    "safetensors>=0.5.0",
    "requests>=2.32.0",
    "pyyaml>=6.0.0",
    "filelock>=3.17.0",
    "regex>=2024.0.0",
]
requires-python = ">=3.10"

[project.optional-dependencies]
development = [
    "setuptools>=75.8.2",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "jupyter>=1.1.0",
    "notebook>=7.3.0",
    "ipywidgets>=8.1.0"
]

[project.urls]
"Homepage" = "https://github.com/SimonAytes/SoT"
"Documentation" = "https://github.com/SimonAytes/SoT#README.md"
"Source Code" = "https://github.com/SimonAytes/SoT"
"Hugging Face Model" = "https://huggingface.co/saytes/SoT_DistilBERT"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests", "tests.*"]